<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:dependency="indicatorEnabled"
        android:title="@string/pref_notification_settings_title">

        <SwitchPreference
            android:key="indicatorEnabled"
            android:title="@string/pref_enable_indicator_title"
            android:summary="@string/pref_enable_indicator_summary"
            android:disableDependentsState="false"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="notificationOnLockScreen"
            android:title="@string/pref_lockscreen_notification_title"
            android:summaryOn="@string/pref_lockscreen_notification_summary_on"
            android:summaryOff="@string/pref_lockscreen_notification_summary_off"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="More">

        <Preference
            android:title="Rate App"
            android:key="btnRateApp"/>

        <Preference
            android:title="Share App"
            android:key="btnShareApp"/>

        <Preference
            android:title="About"
            android:key="btnAbout"/>

        <Preference
            android:title="Privacy Policy"
            android:key="btnPolicy"/>

    </PreferenceCategory>

</PreferenceScreen>
